# certs

./: .gitignore  README.md  docker-compose.yml  flake.nix
backend/: Dockerfile  pyproject.toml
backend/admin_panel/: forms.py  urls.py  views.py
backend/admin_panel/management/commands/: createadmin.py
backend/admin_panel/migrations/: 0001_initial.py
backend/admin_panel/templates/admin_panel/: base.html  create_admin.html  dashboard.html  login.html  student_applications.html  student_detail.html
backend/certificates/: models.py  services.py  urls.py  utils.py  views.py
backend/certificates/migrations/: 0001_initial.py  0002_certificate_verification_code.py
backend/certificates/templates/certificates/: certificate_list.html  certificate_preview.html  preview.html
backend/core/: settings.py  urls.py
backend/home/: urls.py  views.py
backend/home/templates/home/: about.html  base.html  contact.html  home.html
backend/home/templates/home/includes/: footer.html  navbar.html
backend/students/: admin.py  email_messages.py  emails.py  forms.py  models.py  tests.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py
backend/students/templates/students/: base.html  check_status.html  registration.html  registration_success.html  status_result.html  student_form.html  success.html
backend/students/templates/students/emails/: certificate_generated.html  registration_received.html  status_accepted.html  status_updated.html
