[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django",
    "django-cors-headers",
    "django-crispy-forms>=2.4",
    "django-environ",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "drf-yasg",
    "icecream",
    "pillow",
    "psycopg[binary]",
    "pypdf2>=3.0.1",
    "qrcode[pil]>=8.2",
    "reportlab>=4.4.4",
]
